# JustAnotherVoiceChat

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ChangeLog.md  LICENSE  README.md  package.ini.in
include/: AlternateVoice.h  Client.h  HttpServer.h  Protocol.h  Teamspeak.h  TeamspeakPlugin.h  Version.h.in  alternateVoice.h  audioControlData.h  client.h  controlPacket.h  handshakePacket.h  httpServer.h  justAnotherVoiceChat.h  networkPacket.h  positionData.h  positionPacket.h  protocol.h  protocolPacket.h  statusPacket.h  taskRunner.h  tasks.h  teamspeak.h  teamspeakPlugin.h  updatePacket.h  util.h  version.h.in
include/network/: audioControlData.h  client.h  controlPacket.h  handshakePacket.h  networkPacket.h  positionData.h  positionPacket.h  protocolPacket.h  statusPacket.h  updatePacket.h
include/packets/: audioControlData.h  controlPacket.h  handshakePacket.h  networkPacket.h  positionData.h  positionPacket.h  protocolPacket.h  statusPacket.h  updatePacket.h
src/: AlternateVoice.cpp  CMakeLists.txt  Client.cpp  HttpServer.cpp  Teamspeak.cpp  TeamspeakPlugin.cpp  alternateVoice.cpp  client.cpp  httpServer.cpp  justAnotherVoiceChat.cpp  teamspeak.cpp  teamspeakPlugin.cpp  util.cpp
src/network/: client.cpp
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  test.cpp  ts3mock.cpp
